# tinye

./: Cargo.toml  LICENSE  README.md
src/: cmdp.rs  colors.rs  editor.rs  main.rs
